implement logger implementaion