@@ -44,9 +44,6 @@
                 <configuration>
                     <source>23</source>
                     <target>23</target>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
